fixed print pdf on safari

--- a/src/style/dashboardPage.css
+++ b/src/style/dashboardPage.css
@@ -496,6 +496,15 @@
     /*margin-top: 100px;*/
 }
 
+
+.printPage {
+    page-break-before: always;
+    overflow:hidden;
+    height: auto !important;
+    overflow: initial !important;
+
+}
+
 @media screen {
     .contentToPrint {
         display:none;
@@ -503,24 +512,25 @@
 }
 
 @media print {
-    .printable {
-        width: 210mm;
-        height: 297mm;
+    @page {
+        size: A4;
+        margin: 0;
     }
-    /* ... the rest of the rules ... */
+    html, body {
+        width: 210mm; /* A4 Paper width */
+        height: initial !important;
+        overflow: initial !important;
+    }
 }
 
 
-
 /* large devices */
-
 @media (min-width: 768px) {
 
 }
 
 /* Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) and (max-width: 767.98px) {
-
 
 }
 
