--- a/src/style/homepage.css
+++ b/src/style/homepage.css
@@ -467,6 +467,7 @@
     border-radius: 10px;
     padding:1px;
     margin-right:20px;
+    width:100%;
 
 }
 .scrollBox:hover {
